# oldnews

./: .gitignore  404.html  CONTRIBUTING.md  ChangeLog.md  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: style-and-lint.yaml
.sandbox/: local_fresh.py  local_unread.py
changelog/: index.html
command_line/: index.html
configuration/: index.html
docs/: CNAME  command_line.md  configuration.md  getting_started.md  grab_filters.md  index.md  using.md
getting_started/: index.html
grab_filters/: index.html
license/: index.html
search/: search_index.json
src/oldnews/: __init__.py  __main__.py  content.py  oldnews.py  sync.py
src/oldnews/commands/: __init__.py  admin.py  copying.py  main.py  marking.py  navigation.py  opening.py  ui.py
src/oldnews/data/: __init__.py  config.py  db.py  dump.py  last_grab.py  local_articles.py  local_data.py  local_folders.py  local_subscriptions.py  local_unread.py  log.py  navigation_state.py  reset.py  tools.py
src/oldnews/data/models/: __init__.py  local_article.py  local_folder.py  local_state.py  local_subscription.py
src/oldnews/providers/: main.py
src/oldnews/screens/: folder_input.py  information_display.py  login.py  main.py  move_subscription.py  new_subscription.py  process_subscription.py  subscription_content_filter.py
src/oldnews/sync/: __init__.py  sync.py
src/oldnews/widgets/: __init__.py  _after_highlight.py  _next_matching_option.py  article_content.py  article_list.py  article_list_header.py  article_view.py  navigation.py
using/: index.html
