[project]
name = "oldnews"
version = "0.0.1"
description = "Coming at some point"
readme = "README.md"
authors = [
    { name = "Dave Pearson", email = "davep@davep.org" }
]
requires-python = ">=3.11"
dependencies = [
    "textual>=6.3.0",
    "textual-enhanced>=1.0.0",
    "xdg-base-dirs>=6.0.2",
]

[project.scripts]
oldnews = "oldnews.__main__:main"

[build-system]
requires = ["uv_build>=0.9.4,<0.10.0"]
build-backend = "uv_build"

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

[tool.pyright]
venvPath="."
venv=".venv"
exclude=[".venv"]

[dependency-groups]
dev = [
    "codespell>=2.4.1",
    "mypy>=1.18.2",
    "pre-commit>=4.3.0",
    "ruff>=0.14.0",
]
